#83 fix bug where label overlapse input values

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -692,12 +692,6 @@ nav {
   touch-action: manipulation;
 }
 
-.contact-me__form input,
-.contact-me__form textarea,
-.contact-me__form button {
-  margin: 1em 0 0.25em;
-}
-
 .contact-me__form label,
 .contact-me__form button {
   font-weight: var(--fw-bold);
@@ -705,6 +699,7 @@ nav {
 
 .contact-me__form input,
 .contact-me__form textarea {
+  margin: 1em 0 0.25em;
   cursor: text;
   border: 0;
   outline: 1px solid var(--fc-dark);
@@ -729,7 +724,9 @@ nav {
 }
 
 .contact-me__form input:focus + label,
-.contact-me__form textarea:focus + label {
+.contact-me__form input:not(:placeholder-shown) + label,
+.contact-me__form textarea:focus + label,
+.contact-me__form textarea:not(:placeholder-shown) + label {
   cursor: text;
   white-space: nowrap;
   overflow: hidden;
@@ -738,7 +735,8 @@ nav {
   transform: translate(0, -3.1rem);
 }
 
-.contact-me__form textarea:focus + label {
+.contact-me__form textarea:focus + label,
+.contact-me__form textarea:not(:placeholder-shown) + label {
   transform: translate(0, -7.75rem);
 }
 
@@ -748,7 +746,7 @@ nav {
   font-size: 1.5rem;
   padding: 0.5em;
   border: 0;
-  margin-bottom: 1.5em;
+  margin: 0 0 1.5em;
   text-transform: uppercase;
   cursor: pointer;
 }
@@ -813,11 +811,14 @@ nav {
   }
 
   .contact-me__form input:focus + label,
-  .contact-me__form textarea:focus + label {
+  .contact-me__form input:not(:placeholder-shown) + label,
+  .contact-me__form textarea:focus + label,
+  .contact-me__form textarea:not(:placeholder-shown) + label {
     transform: translate(0, -3.8rem);
   }
 
-  .contact-me__form textarea:focus + label {
+  .contact-me__form textarea:focus + label,
+  .contact-me__form textarea:not(:placeholder-shown) + label {
     transform: translate(0, -9.75rem);
   }
 }
